--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="ZNf5aSw5C7ZD7xETyne1mLOCD5n5ZjXX4CF0zvCbmA0" />
     <link rel="icon" type="image/svg+xml" href="/sus.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NotAny AI</title>
