--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="google-site-verification" content="ZNf5aSw5C7ZD7xETyne1mLOCD5n5ZjXX4CF0zvCbmA0" />
+    <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/sus.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NotAny AI</title>
